--- a/readme.adoc
+++ b/readme.adoc
@@ -2,6 +2,13 @@
 Elizabeth Paige Harper <foxcapade@gmail.com>
 v1.0, December 5, 2020
 
+image:https://img.shields.io/github/v/tag/foxcapades/gojasc[GitHub tag (latest SemVer)]
+image:https://img.shields.io/github/go-mod/go-version/foxcapades/gojasc[GitHub go.mod Go version]
+image:https://img.shields.io/github/license/foxcapades/gojasc[GitHub]
+image:https://img.shields.io/badge/api-docs-ff69b4[title="API Docs", link=https://pkg.go.dev/github.com/foxcapades/gojasc/v0/bytify]
+//image:https://github.com/Foxcapades/gojasc/workflows/Go/badge.svg[Go]
+//image:https://codecov.io/gh/Foxcapades/gojasc/branch/main/graph/badge.svg?token=E4WD9IURJL[title=codecov, link=https://codecov.io/gh/Foxcapades/gojasc]
+
 GoJasc provides a suite of utilities to serialize data into a binary form that
 writes its octet output in a JSON safe range of ASCII characters.
 
